apache-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: apache
  name: apache-svc
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: apache
  type: NodePort
